--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,6 @@
   functions = "netlify/functions"
 
 [build.environment]
+  NODE_VERSION = "20"
   SERVER_PRESET = "netlify"
+  NITRO_PRESET = "netlify"
